Fixed footer and header wrapping

--- a/css/home.css
+++ b/css/home.css
@@ -279,7 +279,6 @@ h6 {
     bottom: 0px;
     right: 0px;
     width: 100%;
-	height: 4vh;
 	max-height: 20vh;
 }
 .footerlinks {
@@ -296,7 +295,6 @@ h6 {
     top: 0px;
     right: 0px;
     width: 100%;
-	height: 5vh;
 	max-height: 24vh;
 }
 
